# oiter

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  conan_provider.cmake  conandata.yml  conanfile.py  dependencies.cmake
assets/meshes/: basic-oit-no-monkey.glb  basic-oit.glb  just-monkey-oit.glb
assets/shaders/dual_depth_peeling/: blend.sshg  default.vert  dual_peel.sshg  final.sshg  fullscreen.vert  geometry.sshg  init.sshg  opaque.sshg  peel.sshg
shaders/dual_depth_peeling/: opaque.sshg
src/: bake.cpp  bake.hpp  cli_parser.h  config.hpp  imgui.hpp  main.cpp  render_params.hpp
src/methods/: dual_depth_peeling.cpp  dual_depth_peeling.hpp  oit_method.hpp
src/util/: config.hpp  load_scene.hpp
